--- a/index.html
+++ b/index.html
@@ -198,14 +198,59 @@
         background-color: #1f1f1f;
         color: #fff;
       }
-      header h1,
-      header p,
-      section h1,
-      section h2,
+      header h1 {
+        color: #fff;
+      }
+      header p {
+        color: #fff;
+      }
+      section h1 {
+        color: #fff;
+      }
+      section h2 {
+        color: #fff;
+      }
       section p {
         color: #fff;
       }
-      /* ... rest of your dark mode styles ... */
+      section a {
+        color: #63c0f5;
+      }
+      .button-container {
+        background-color: #1f1f1f;
+      }
+      .progress-text {
+        color: #fff;
+      }
+    }
+
+    /* Add light theme styles for completeness */
+    [data-theme="light"] {
+      body {
+        background-color: #fff;
+        color: #000;
+      }
+      header h1 {
+        color: #000;
+      }
+      header p {
+        color: #000;
+      }
+      section h1 {
+        color: #000;
+      }
+      section h2 {
+        color: #000;
+      }
+      section p {
+        color: #000;
+      }
+      .button-container {
+        background-color: #fff;
+      }
+      .progress-text {
+        color: #000;
+      }
     }
 
   </style>
