--- a/index.html
+++ b/index.html
@@ -18,127 +18,28 @@
 
 
   <style>
-    @media (prefers-color-scheme: dark) {
-      body {
-        background-color: #1f1f1f;
-        /* Dark background color */
-        color: #fff;
-        /* Light text color */
-      }
-
-      header h1 {
-        color: #fff;
-        /* White title color in dark mode */
-      }
-
-      header p {
-        color: #fff;
-        /* White text color in dark mode */
-      }
-
-      section h1 {
-        color: #fff;
-        /* White text color in dark mode */
-      }
-
-      section h2 {
-        color: #fff;
-        /* White text color in dark mode */
-      }
-
-      section p {
-        color: #fff;
-        /* White text color in dark mode */
-      }
-
-      .button-container {
-        background-color: #1f1f1f;
-        /* Dark background color for buttons */
-      }
-
-      /* Adjust other styles for dark mode */
+    /* Light theme (default) */
+    :root {
+      --background-color: #fff;
+      --text-color: #000;
     }
 
-    .button-container {
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-      /* Adjust as needed */
+    /* Dark theme */
+    [data-theme="dark"] {
+      --background-color: #1f1f1f;
+      --text-color: #fff;
     }
 
-    /* Style for all buttons */
-    .linkedin-button,
-    .cv-button {
-      display: flex;
-      align-items: center;
-      text-decoration: none;
-      padding: 5px 5px;
-      border-radius: 5px;
-      background-color: #0077B5;
-      color: #fff;
-      font-weight: bold;
-      transition: background-color 0.3s ease;
-    }
-
-    .linkedin-button:hover {
-      background-color: #005082;
-    }
-
-    .linkedin-button:hover span,
-    .cv-button:hover span {
-      color: #fff;
-      /* Text color remains white on hover */
-    }
-
-    /* Style for button images */
-    .linkedin-button img {
-      width: 32px;
-      height: 32px;
-      /* Adjust as needed for spacing between image and text */
-    }
-
-    /*
     body {
-    background-color: #1f1f1f; /* Dark background color */
-    /* background-image: url('assets/galaxytile.jpg'); /* Replace 'path/to/stars-image.jpg' with the actual path to your stars image */
-    /* background-repeat: repeat; /* Repeat the background image */
-    /*}
-    */
-
-    /* Add global font size reduction */
-    body {
-      font-size: 14px;  /* Reduced from default 16px */
+      background-color: var(--background-color);
+      color: var(--text-color);
     }
 
-    h1 { font-size: 1.8em; }
-    h2 { font-size: 1.5em; }
-
-    /* Progress bar styling */
-    .progress {
-      height: 25px;  /* Make progress bar slightly taller */
-      position: relative;  /* Required for absolute positioning of text */
+    header h1, header p, section h1, section h2, section p {
+      color: var(--text-color);
     }
 
-    .progress-text {
-      position: absolute;
-      width: 100%;
-      text-align: center;
-      line-height: 25px;  /* Match height of progress bar */
-      color: #000;  /* Dark text color */
-      mix-blend-mode: difference;  /* This will make text visible on both light and dark backgrounds */
-    }
-
-    /* Dark mode adjustments */
-    @media (prefers-color-scheme: dark) {
-      body {
-        font-size: 14px;  /* Ensure font size is consistent in dark mode */
-      }
-
-      .progress-text {
-        color: #fff;  /* Light text color for dark mode */
-      }
-    }
-
+    /* Theme switch styles */
     .theme-switch-wrapper {
       position: fixed;
       top: 1rem;
@@ -205,14 +106,6 @@
       transform: translateX(26px) rotate(180deg);
     }
 
-    [data-theme="dark"] .slider .sun-and-moon > .sun {
-      transform: scale(1.75);
-    }
-
-    [data-theme="dark"] .slider .sun-and-moon > .sun-beams {
-      opacity: 0;
-    }
-
   </style>
 
 
@@ -220,10 +113,6 @@
 </head>
 
 <body>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-  <!-- Replace the existing button with this -->
   <div class="theme-switch-wrapper">
     <label class="theme-switch" for="checkbox">
       <input type="checkbox" id="checkbox" />
@@ -248,6 +137,8 @@
       </div>
     </label>
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
   <div class="wrapper">
     <header>
@@ -379,29 +270,33 @@
   </div>
   <script src="javascripts/scale.fix.js"></script>
   <script>
-    // Update the theme toggle JavaScript
-    const toggleSwitch = document.querySelector('.theme-switch input[type="checkbox"]');
+    document.addEventListener('DOMContentLoaded', function() {
+      const toggleSwitch = document.querySelector('#checkbox');
 
-    // Check for saved theme preference, otherwise use system preference
-    const savedTheme = localStorage.getItem('theme');
-    if (savedTheme) {
-      document.documentElement.setAttribute('data-theme', savedTheme);
-      if (savedTheme === 'dark') {
-        toggleSwitch.checked = true;
+      // Function to switch theme
+      function switchTheme(e) {
+        if (e.target.checked) {
+          document.documentElement.setAttribute('data-theme', 'dark');
+          localStorage.setItem('theme', 'dark');
+        } else {
+          document.documentElement.setAttribute('data-theme', 'light');
+          localStorage.setItem('theme', 'light');
+        }
       }
-    } else {
-      const systemTheme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
-      document.documentElement.setAttribute('data-theme', systemTheme);
-      if (systemTheme === 'dark') {
-        toggleSwitch.checked = true;
-      }
-    }
 
-    // Toggle theme on switch change
-    toggleSwitch.addEventListener('change', function(e) {
-      const newTheme = e.target.checked ? 'dark' : 'light';
-      document.documentElement.setAttribute('data-theme', newTheme);
-      localStorage.setItem('theme', newTheme);
+      // Event listener
+      toggleSwitch.addEventListener('change', switchTheme, false);
+
+      // Check for saved theme preference
+      const currentTheme = localStorage.getItem('theme') ||
+        (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
+
+      if (currentTheme) {
+        document.documentElement.setAttribute('data-theme', currentTheme);
+        if (currentTheme === 'dark') {
+          toggleSwitch.checked = true;
+        }
+      }
     });
   </script>
 </body>
