Make buttons smaller

--- a/index.html
+++ b/index.html
@@ -106,6 +106,25 @@
       transform: translateX(26px) rotate(180deg);
     }
 
+    /* Add or update the button container styles */
+    .button-container {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+    }
+
+    .linkedin-button {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .linkedin-button img {
+      width: 24px;  /* Adjust this value to your preferred size */
+      height: 24px; /* Keep it square */
+      object-fit: contain;
+    }
+
   </style>
 
 
