--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     }
 
     .slider {
-      background-color: #1f1f1f;  /* Dark background when in light mode */
+      background-color: #1f1f1f;
       bottom: 0;
       cursor: pointer;
       left: 0;
@@ -84,47 +84,43 @@
       border-radius: 50%;
     }
 
-    /* Light mode (unchecked) */
-    .slider .sun-and-moon {
+    .sun-and-moon {
       position: absolute;
       width: 20px;
       height: 20px;
       left: 7px;
       top: 7px;
       transition: .4s;
-      color: #fff;  /* Moon icon color */
+      color: #fff;
     }
 
-    /* Dark mode (checked) */
+    .sun-and-moon .sun {
+      opacity: 0;
+    }
+
+    .sun-and-moon .moon {
+      opacity: 1;
+    }
+
     input:checked + .slider {
-      background-color: #fff;  /* Light background when in dark mode */
+      background-color: #fff;
     }
 
     input:checked + .slider:before {
       transform: translateX(26px);
-      background-color: #1f1f1f;  /* Dark circle when in dark mode */
+      background-color: #1f1f1f;
     }
 
     input:checked + .slider .sun-and-moon {
-      transform: translateX(26px) rotate(180deg);
-      color: #1f1f1f;  /* Sun icon color */
+      transform: translateX(26px);
+      color: #1f1f1f;
     }
 
-    /* Sun and moon icon specific styles */
-    .sun-and-moon > .sun {
-      transform-origin: center center;
+    input:checked + .slider .sun-and-moon .sun {
+      opacity: 1;
     }
 
-    .sun-and-moon > .sun-beams {
-      transform-origin: center center;
-      stroke-width: 2px;
-    }
-
-    [data-theme="dark"] .sun-and-moon > .sun {
-      transform: scale(1.75);
-    }
-
-    [data-theme="dark"] .sun-and-moon > .sun-beams {
+    input:checked + .slider .sun-and-moon .moon {
       opacity: 0;
     }
 
@@ -200,23 +196,12 @@
   <div class="theme-switch-wrapper">
     <label class="theme-switch" for="checkbox">
       <input type="checkbox" id="checkbox" />
-      <div class="slider round">
+      <div class="slider">
         <svg class="sun-and-moon" aria-hidden="true" width="24" height="24" viewBox="0 0 24 24">
-          <mask class="moon" id="moon-mask">
-            <rect x="0" y="0" width="100%" height="100%" fill="white" />
-            <circle cx="24" cy="10" r="6" fill="black" />
-          </mask>
-          <circle class="sun" cx="12" cy="12" r="6" mask="url(#moon-mask)" fill="currentColor" />
-          <g class="sun-beams" stroke="currentColor">
-            <line x1="12" y1="1" x2="12" y2="3" />
-            <line x1="12" y1="21" x2="12" y2="23" />
-            <line x1="4.22" y1="4.22" x2="5.64" y2="5.64" />
-            <line x1="18.36" y1="18.36" x2="19.78" y2="19.78" />
-            <line x1="1" y1="12" x2="3" y2="12" />
-            <line x1="21" y1="12" x2="23" y2="12" />
-            <line x1="4.22" y1="19.78" x2="5.64" y2="18.36" />
-            <line x1="18.36" y1="5.64" x2="19.78" y2="4.22" />
-          </g>
+          <!-- Moon -->
+          <path class="moon" fill="currentColor" d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1-8.313-12.454z"/>
+          <!-- Sun -->
+          <path class="sun" fill="currentColor" d="M12 2.25a.75.75 0 0 1 .75.75v2a.75.75 0 0 1-1.5 0V3a.75.75 0 0 1 .75-.75zM7.5 12a4.5 4.5 0 1 1 9 0a4.5 4.5 0 0 1-9 0zm12.75 0a.75.75 0 0 1-.75.75h-2a.75.75 0 0 1 0-1.5h2a.75.75 0 0 1 .75.75zM12 21.75a.75.75 0 0 1-.75-.75v-2a.75.75 0 0 1 1.5 0v2a.75.75 0 0 1-.75.75zM3.75 12a.75.75 0 0 1-.75-.75v-.5a.75.75 0 0 1 1.5 0v.5a.75.75 0 0 1-.75.75z"/>
         </svg>
       </div>
     </label>
