--- a/index.html
+++ b/index.html
@@ -44,84 +44,73 @@
       position: fixed;
       top: 1rem;
       right: 1rem;
-      display: flex;
-      align-items: center;
       z-index: 100;
     }
 
-    .theme-switch {
-      display: inline-block;
-      height: 34px;
+    :root {
+      --toggleHeight: 2em;
+      --toggleWidth: 3.75em;
+      --toggleBtnRadius: 1.25em;
+      --bgColor--night: #423966;
+      --mooncolor: #D9FBFF;
+      --bgColor--day: #9ee3fb;
+    }
+
+    .tdnn {
+      margin: 0 auto;
+      font-size: 100%;
       position: relative;
-      width: 60px;
-    }
-
-    .theme-switch input {
-      display: none;
-    }
-
-    .slider {
-      background-color: #1f1f1f;
-      bottom: 0;
+      height: var(--toggleHeight);
+      width: var(--toggleWidth);
+      border-radius: var(--toggleHeight);
+      transition: all 500ms ease-in-out;
+      background: var(--bgColor--night);
       cursor: pointer;
-      left: 0;
-      position: absolute;
-      right: 0;
-      top: 0;
-      transition: .4s;
-      border-radius: 34px;
     }
 
-    .slider:before {
-      background-color: #fff;
-      bottom: 4px;
-      content: "";
-      height: 26px;
-      left: 4px;
+    .day {
+      background: #FFBF71;
+    }
+
+    .moon {
       position: absolute;
-      transition: .4s;
-      width: 26px;
+      display: block;
       border-radius: 50%;
+      transition: all 400ms ease-in-out;
+      top: 0.375em;
+      left: 0.375em;
+      transform: rotate(-75deg);
+      width: var(--toggleBtnRadius);
+      height: var(--toggleBtnRadius);
+      background: var(--bgColor--night);
+      box-shadow:
+        0.375em 0.3125em 0 0em var(--mooncolor) inset,
+        rgba(255, 255, 255, 0.1) 0em -0.875em 0 -0.5625em,
+        rgba(255, 255, 255, 0.1) 0.375em 0.875em 0 -0.5625em,
+        rgba(255, 255, 255, 0.1) 0.25em 1.625em 0 -0.5em,
+        rgba(255, 255, 255, 0.1) 0.75em 0.25em 0 -0.5125em,
+        rgba(255, 255, 255, 0.1) 1em 1em 0 -0.5625em,
+        rgba(255, 255, 255, 0.1) 0.75em 1.625em 0 -0.5625em,
+        rgba(255, 255, 255, 0.1) -0.5em 0.875em 0 -0.5625em,
+        rgba(255, 255, 255, 0.1) -0.125em 1.25em 0 -0.5625em;
     }
 
-    .sun-and-moon {
-      position: absolute;
-      width: 20px;
-      height: 20px;
-      left: 7px;
-      top: 7px;
-      transition: .4s;
-      color: #fff;
-    }
-
-    .sun-and-moon .sun {
-      opacity: 0;
-    }
-
-    .sun-and-moon .moon {
-      opacity: 1;
-    }
-
-    input:checked + .slider {
-      background-color: #fff;
-    }
-
-    input:checked + .slider:before {
-      transform: translateX(26px);
-      background-color: #1f1f1f;
-    }
-
-    input:checked + .slider .sun-and-moon {
-      transform: translateX(26px);
-      color: #1f1f1f;
-    }
-
-    input:checked + .slider .sun-and-moon .sun {
-      opacity: 1;
-    }
-
-    input:checked + .slider .sun-and-moon .moon {
-      opacity: 0;
+    .sun {
+      top: 0.5625em;
+      left: 2.25em;
+      transform: rotate(0deg);
+      width: 0.875em;
+      height: 0.875em;
+      background: #fff;
+      box-shadow: 0.375em 0.375em 0 0.625em #fff inset,
+        0 -0.625em 0 -0.3375em #fff,
+        0.4375em -0.4375em 0 -0.375em #fff,
+        0.625em 0 0 -0.3375em #fff,
+        0.4375em 0.4375em 0 -0.375em #fff,
+        0 0.625em 0 -0.3375em #fff,
+        -0.4375em 0.4375em 0 -0.375em #fff,
+        -0.625em 0 0 -0.3375em #fff,
+        -0.4375em -0.4375em 0 -0.375em #fff;
     }
 
     /* Add or update the button container styles */
@@ -194,17 +183,10 @@
 
 <body>
   <div class="theme-switch-wrapper">
-    <label class="theme-switch" for="checkbox">
-      <input type="checkbox" id="checkbox" />
-      <div class="slider">
-        <svg class="sun-and-moon" aria-hidden="true" width="24" height="24" viewBox="0 0 24 24">
-          <!-- Moon -->
-          <path class="moon" fill="currentColor" d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1-8.313-12.454z"/>
-          <!-- Sun -->
-          <path class="sun" fill="currentColor" d="M12 2.25a.75.75 0 0 1 .75.75v2a.75.75 0 0 1-1.5 0V3a.75.75 0 0 1 .75-.75zM7.5 12a4.5 4.5 0 1 1 9 0a4.5 4.5 0 0 1-9 0zm12.75 0a.75.75 0 0 1-.75.75h-2a.75.75 0 0 1 0-1.5h2a.75.75 0 0 1 .75.75zM12 21.75a.75.75 0 0 1-.75-.75v-2a.75.75 0 0 1 1.5 0v2a.75.75 0 0 1-.75.75zM3.75 12a.75.75 0 0 1-.75-.75v-.5a.75.75 0 0 1 1.5 0v.5a.75.75 0 0 1-.75.75z"/>
-        </svg>
+    <div class="tdnn">
+      <div class="moon">
       </div>
-    </label>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
