Add embedded video

--- a/index.html
+++ b/index.html
@@ -284,6 +284,14 @@
         <li>As part of an Honour's project at KU Leuven, I constructed a neural network to reconstruct spectral functions (and complex poles) of confined particles in high energy physics. This generalized upon previous approaches and achieved state of the art performance on genuine lattice data <a href="https://scipost.org/SciPostPhys.13.4.097/pdf" title="https://scipost.org/SciPostPhys.13.4.097/pdf">[SciPostPhys.13.4.097]</a>. </li>
       </ul>
 
+      <!-- Added YouTube video embed -->
+      <div class="ratio ratio-16x9 mb-4">
+        <iframe
+          src="https://www.youtube.com/embed/v-tlV2J0nCU"
+          title="YouTube video"
+          allowfullscreen>
+        </iframe>
+      </div>
 
       <h2>PhD progress bar</h2>
       <div class="progress" role="progressbar" aria-label="Info striped example" aria-valuenow="3" aria-valuemin="0" aria-valuemax="100">
