--- a/index.html
+++ b/index.html
@@ -284,10 +284,11 @@
         <li>As part of an Honour's project at KU Leuven, I constructed a neural network to reconstruct spectral functions (and complex poles) of confined particles in high energy physics. This generalized upon previous approaches and achieved state of the art performance on genuine lattice data <a href="https://scipost.org/SciPostPhys.13.4.097/pdf" title="https://scipost.org/SciPostPhys.13.4.097/pdf">[SciPostPhys.13.4.097]</a>. </li>
       </ul>
 
-      <!-- Added YouTube video embed -->
+      <h2>Past talks</h2>
+      <p>Talk at the Center for Astrophysics | Harvard & Smithsonian as part of the AstroAI workshop:</p>
       <div class="ratio ratio-16x9 mb-4">
         <iframe
-          src="https://www.youtube.com/embed/v-tlV2J0nCU"
+          src="https://www.youtube.com/embed/v-tlV2J0nCU?start=50"
           title="YouTube video"
           allowfullscreen>
         </iframe>
