--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
 
       <!-- CV button -->
-      <p> <b><a href="/assets/CV.pdf" target="_blank">View my CV</a></b></p>
+      <p> <b><a href="/assets/CV.pdf" target="_blank"><svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor" style="margin-right: 8px; vertical-align: middle;"><path d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20Z"/></svg>View my CV</a></b></p>
 
 
 
