--- a/index.html
+++ b/index.html
@@ -323,10 +323,11 @@
 
       <h2>Past talks</h2>
       <p>Talk at the Center for Astrophysics | Harvard & Smithsonian as part of the AstroAI workshop:</p>
-      <div class="ratio ratio-16x9 mb-4">
+      <div style="position: relative; width: 100%; height: 0; padding-bottom: 56.25%; margin-bottom: 1rem;">
         <iframe
           src="https://www.youtube.com/embed/v-tlV2J0nCU?start=50"
           title="YouTube video"
+          style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
           allowfullscreen>
         </iframe>
       </div>
