--- a/index.html
+++ b/index.html
@@ -313,11 +313,13 @@
 
       <h2>Past projects</h2>
       <ul>
+        <li>During the first year of my PhD, we showed that stars must be able to accrete a lot more mass than commonly assumed. [
+          https://doi.org/10.48550/arXiv.2505.14780] <a href="https://doi.org/10.48550/arXiv.2505.14780" title="https://doi.org/10.48550/arXiv.2505.14780">[doi.org/10.48550/arXiv.2505.14780]</a>.</li>
         <li>At NASA Goddard Space Flight Center, I did research on neutron star X-ray and Gamma-ray emission. In particular, we inferred neutron star parameters from <a href="https://science.nasa.gov/mission/nicer/" title="NICER">NICER</a>
           and <a href="https://fermi.gsfc.nasa.gov/" title="Fermi">Fermi</a> data using neural networks emulators, speeding up simulations by 7 orders of magnitude at a minimal loss in accuracy. I am also a member of the Fermi LAT Collaboration. </li>
         <li>At ESA's Advanced Concepts Team, I implemented a novel approach to reconstruct Dark Matter distributions from stellar orbits in the Galactic Centre,
           eliminating the need to make assumptions on the physical composition of the Dark Matter distribution
-          <a href="https://doi.org/10.1051/0004-6361/202347738" title="https://arxiv.org/pdf/2308.09170.pdf">[doi.org/10.1051/0004-6361/202347738]</a>. </li>
+          <a href="https://doi.org/10.1051/0004-6361/202347738" title="doi.org/10.1051/0004-6361/202347738">[doi.org/10.1051/0004-6361/202347738]</a>. </li>
         <li>As part of an Honour's project at KU Leuven, I constructed a neural network to reconstruct spectral functions (and complex poles) of confined particles in high energy physics. This generalized upon previous approaches and achieved state of the art performance on genuine lattice data <a href="https://scipost.org/SciPostPhys.13.4.097/pdf" title="https://scipost.org/SciPostPhys.13.4.097/pdf">[SciPostPhys.13.4.097]</a>. </li>
       </ul>
 
