--- a/index.html
+++ b/index.html
@@ -313,8 +313,7 @@
 
       <h2>Past projects</h2>
       <ul>
-        <li>During the first year of my PhD, we showed that stars must be able to accrete a lot more mass than commonly assumed. [
-          https://doi.org/10.48550/arXiv.2505.14780] <a href="https://doi.org/10.48550/arXiv.2505.14780" title="https://doi.org/10.48550/arXiv.2505.14780">[doi.org/10.48550/arXiv.2505.14780]</a>.</li>
+        <li>During the first year of my PhD, we showed that stars must be able to accrete a lot more mass than commonly assumed. <a href="https://doi.org/10.48550/arXiv.2505.14780" title="https://doi.org/10.48550/arXiv.2505.14780">[doi.org/10.48550/arXiv.2505.14780]</a>.</li>
         <li>At NASA Goddard Space Flight Center, I did research on neutron star X-ray and Gamma-ray emission. In particular, we inferred neutron star parameters from <a href="https://science.nasa.gov/mission/nicer/" title="NICER">NICER</a>
           and <a href="https://fermi.gsfc.nasa.gov/" title="Fermi">Fermi</a> data using neural networks emulators, speeding up simulations by 7 orders of magnitude at a minimal loss in accuracy. I am also a member of the Fermi LAT Collaboration. </li>
         <li>At ESA's Advanced Concepts Team, I implemented a novel approach to reconstruct Dark Matter distributions from stellar orbits in the Galactic Centre,
