--- a/index.html
+++ b/index.html
@@ -212,6 +212,19 @@
       to { opacity: 1; }
     }
 
+    /* Header background */
+    header {
+      background-color: rgba(0, 0, 0, 0.05);
+      padding: 20px;
+      border-radius: 8px;
+      margin-bottom: 20px;
+    }
+
+    /* Dark theme header background */
+    [data-theme="dark"] header {
+      background-color: rgba(255, 255, 255, 0.05);
+    }
+
     /* Progress bar styles */
     .progress {
       position: relative;
