--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     <section>
       <h1>AI for Astrophysics</h1>
 
-      <p> I am a PhD student at the <a href="https://www.mpa-garching.mpg.de/" title="Max Planck Institute for Astrophysics">Max Planck Institute for Astrophysics</a> working on "Advancing stellar and binary evolution using machine learning" with Prof. Selma de Mink.
+      <p> I am a PhD student at the <a href="https://www.mpa-garching.mpg.de/" title="Max Planck Institute for Astrophysics">Max Planck Institute for Astrophysics</a> working on "Advancing stellar and binary evolution using machine learning" with Prof. <a href="https://www.selmademink.com/" title="Selma de Mink">Selma de Mink</a>.
         I was previously a Research Assistant in the <a href="https://science.gsfc.nasa.gov/astrophysics/astroparticles/" title="Astroparticle Physics Lab">Astroparticle Physics Lab</a> and
         the <a href="https://science.gsfc.nasa.gov/astrophysics/gravity/" title="Gravitational Astrophysics Lab">Gravitational Astrophysics Lab</a>
         at <a href="https://www.nasa.gov/goddard/" title="NASA Goddard">NASA Goddard Space Flight Center</a>.
@@ -326,7 +326,7 @@
 
       <h2>Past projects</h2>
       <ul>
-        <li>During the first year of my PhD, we showed that stars must be able to accrete a lot more mass than commonly assumed. <a href="https://doi.org/10.48550/arXiv.2505.14780" title="https://doi.org/10.48550/arXiv.2505.14780">[doi.org/10.48550/arXiv.2505.14780]</a>.</li>
+        <li>During the first year of my PhD, we showed that when stars throw mass onto a companion star that is orbiting closely, this companion accretes a lot of the transferred mass. This is in direct conflict with commonly used theoretical models, which is why it was surprising! <a href="https://doi.org/10.48550/arXiv.2505.14780" title="https://doi.org/10.48550/arXiv.2505.14780">[doi.org/10.48550/arXiv.2505.14780]</a>.</li>
         <li>At NASA Goddard Space Flight Center, I did research on neutron star X-ray and Gamma-ray emission. In particular, we inferred neutron star parameters from <a href="https://science.nasa.gov/mission/nicer/" title="NICER">NICER</a>
           and <a href="https://fermi.gsfc.nasa.gov/" title="Fermi">Fermi</a> data using neural networks emulators, speeding up simulations by 7 orders of magnitude at a minimal loss in accuracy. I am also a member of the Fermi LAT Collaboration. </li>
         <li>At ESA's Advanced Concepts Team, I implemented a novel approach to reconstruct Dark Matter distributions from stellar orbits in the Galactic Centre,
