--- a/index.html
+++ b/index.html
@@ -391,7 +391,12 @@
         animate();
     </script>
 
-
+      <!-- FuckUpMySite link -->
+      <p style="text-align: center; margin-top: 20px; font-size: 12px; opacity: 0.7;">
+        <a href="https://www.fuckupmysite.com/?url=https%3A%2F%2Fthibaultle.github.io&torchCursor=true&comicSans=true&fakeCursors=true&peskyFly=true" target="_blank" style="color: inherit; text-decoration: none;">
+          Tired of reading this?
+        </a>
+      </p>
 
     </section>
     <footer>
